update some useful plug

--- a/coc-settings.json
+++ b/coc-settings.json
@@ -127,5 +127,10 @@
 	"intelephense.environment.includePaths": [
 		"/home/jochen/workspace/php/"
 	],
-	"intelephense.environment.phpVersion": "7.0"
+	"intelephense.environment.phpVersion": "7.0",
+	"translator.engines": [
+		"bing",
+		"youdao",
+		"haici"
+	]
 }
