update some config

--- a/coc-settings.json
+++ b/coc-settings.json
@@ -47,10 +47,12 @@
 	//	"diagnostic.virtualText": true,
 	//	"diagnostic.virtualTextCurrentLineOnly": false,
 	//	"diagnostic.virtualTextPrefix": "       🔔 ",
-	"diagnostic.errorSign": "✗",
+	//	"diagnostic.errorSign": "✗",
+	"diagnostic.errorSign": "🚨",
 	//	"diagnostic.errorSign": " ",
-	"diagnostic.warningSign": " ",
-	"diagnostic.infoSign": " ",
+	//"diagnostic.warningSign": " ",
+	"diagnostic.warningSign": "💩",
+	"diagnostic.infoSign": "🔨",
 	"diagnostic.hintSign": "💡",
 	//git
 	"git.enableGutters": false,
